--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,14 @@ tools/riscv*
 *.sif
 
 
+dispersion/dispersion
+formation_movement/formation_movement
+leader_movement/leader_movement
+phototaxis/phototaxis
+random_walk/random_walk
+wall_alignment/wall_alignment
+
+
 # Prerequisites
 *.d
 
