--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,13 @@ dependencies
 tools/riscv*
 *.sif
 
+dispersion/dispersion
+formation_movement/formation_movement
+leader_following/leader_following
+phototaxis/phototaxis
+random_walk/random_walk
+wall_alignment/wall_alignment
+
 
 # Prerequisites
 *.d
